eu fiz muita coisa, e esqueci de versionar corretamente

--- a/src/PeiFeira.Application/PeiFeira.Application.csproj
+++ b/src/PeiFeira.Application/PeiFeira.Application.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <ProjectReference Include="..\PeiFeira.Communication\PeiFeira.Communication.csproj" />
     <ProjectReference Include="..\PeiFeira.Domain\PeiFeira.Domain.csproj" />
+    <ProjectReference Include="..\PeiFeira.Exception\PeiFeira.Exception.csproj" />
   </ItemGroup>
 
 </Project>
