--- a/src/PeiFeira.Communication/PeiFeira.Communication.csproj
+++ b/src/PeiFeira.Communication/PeiFeira.Communication.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Requests\Avaliacao\" />
-    <Folder Include="Requests\Projeto\" />
+    <Folder Include="Requests\Avaliacoes\" />
+    <Folder Include="Requests\Projetos\" />
   </ItemGroup>
 
 </Project>
