feat: adicionar sistema de autenticação JWT completo

--- a/src/PeiFeira.Api/appsettings.json
+++ b/src/PeiFeira.Api/appsettings.json
@@ -8,5 +8,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Secret": "VASCODAGAMAEHCAMPEAODACOPADOBRASIL2025",
+    "Issuer": "PeiFeira",
+    "Audience": "PeiFeiraUsers",
+    "ExpirationMinutes": 1440
+  }
 }
