--- a/src/PeiFeira.Api/appsettings.json
+++ b/src/PeiFeira.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-1PEABRK;Database=PeiFeiraDb;Trusted_Connection=true;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=localhost\\MSSQLSERVER02;Database=PeiFeiraDb;Trusted_Connection=true;TrustServerCertificate=true;"
   },
   "Logging": {
     "LogLevel": {
